# reified-bindings

reified-bindings-types/: README.md  reified-bindings.cabal
reified-bindings-types/benchmarks/: Bench.hs
reified-bindings-types/executables/: Main.hs
reified-bindings-types/sources/: ReifiedBindings.hs
reified-bindings-types/sources/ReifiedBindings/: Extra.hs  HaskellBinding.hs  TrueName.hs  Types.hs
reified-bindings-types/tests/: DocTest.hs
reified-bindings-types/tests/ReifiedBindings/: Test.hs
