name:                reified-bindings
version:             0.0.0
synopsis:            TODO
description:         TODO
homepage:            http://github.com/sboosali/reified-bindings#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2016 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

-- data-files:

--  data/

source-repository head
  type:     git
  location: https://github.com/sboosali/reified-bindings


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:
  -Wall
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fno-warn-unticked-promoted-constructors
 default-extensions: AutoDeriveTypeable

 exposed-modules:
                 ReifiedBindings
                 ReifiedBindings.Types
                 ReifiedBindings.HaskellBinding
                 ReifiedBindings.TrueName

-- other-modules:
                 ReifiedBindings.Extra
--                 ReifiedBindings.Example.In
--                 ReifiedBindings.Example.Out ?

 build-depends:
               base >=4.7 && <5

             , transformers
             , template-haskell

             , deepseq
             , hashable
             , semigroups

             , optparse-generic

  -- , exceptions
  -- , free
  -- , bifunctors
  -- , profunctors
  -- , either
  -- , pipes
  -- , formatting
  -- , servant
  -- , Earley
  -- , split
  -- , interpolatedstring-perl6
  -- , wl-pprint-text
  -- , text
  -- , aeson
  -- , hashable
  -- , unordered-containers
  -- , async
  -- , parallel


executable reified-bindings
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , reified-bindings

